--- a/mia/Views/HomePage/Radio/HXRadioShareInfoView.xib
+++ b/mia/Views/HomePage/Radio/HXRadioShareInfoView.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -14,8 +13,8 @@
                 <outlet property="commentLabel" destination="1xM-nG-wgC" id="Obc-vh-ERw"/>
                 <outlet property="shareContentLabel" destination="hkt-cg-nzc" id="i6e-vj-GFg"/>
                 <outlet property="sharerAvatar" destination="FzS-AE-JPh" id="XVZ-ND-nhy"/>
-                <outlet property="sharerLabel" destination="ASY-TG-LWm" id="ry7-AS-H2S"/>
-                <outlet property="timeLabel" destination="7a6-8i-b7f" id="REH-Id-W5O"/>
+                <outlet property="sharerLabel" destination="Fag-67-cpm" id="EKe-hY-6vN"/>
+                <outlet property="timeLabel" destination="lmi-t0-mqp" id="CpM-2e-258"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -42,21 +41,27 @@
                                 <action selector="sharerAvatarButtonPressed" destination="-1" eventType="touchUpInside" id="tmf-xO-xM5"/>
                             </connections>
                         </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vNt-hd-SSk">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vNt-hd-SSk" customClass="HXIBImageView">
                             <rect key="frame" x="27" y="21" width="16" height="16"/>
+                            <color key="backgroundColor" red="0.070588235294117646" green="0.80392156862745101" blue="0.72941176470588232" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="16" id="izd-vo-FqL"/>
                                 <constraint firstAttribute="width" secondItem="vNt-hd-SSk" secondAttribute="height" multiplier="1:1" id="uLY-yk-yiA"/>
                             </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="8"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="王晶分享了" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ASY-TG-LWm" userLabel="分享者信息" customClass="TTTAttributedLabel">
-                            <rect key="frame" x="55" y="3" width="265" height="18"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="王晶分享了" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fag-67-cpm" customClass="TTTAttributedLabel">
+                            <rect key="frame" x="54" y="3" width="266" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1小时前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7a6-8i-b7f" userLabel="分享时间">
-                            <rect key="frame" x="55" y="23" width="265" height="14"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1小时前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lmi-t0-mqp">
+                            <rect key="frame" x="54" y="23" width="266" height="14"/>
                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                             <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -65,16 +70,16 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="FzS-AE-JPh" secondAttribute="bottom" id="0zS-vr-kc4"/>
-                        <constraint firstItem="ASY-TG-LWm" firstAttribute="baseline" secondItem="FzS-AE-JPh" secondAttribute="centerY" constant="-3" id="4ZF-Wd-nPN"/>
-                        <constraint firstItem="ASY-TG-LWm" firstAttribute="leading" secondItem="FzS-AE-JPh" secondAttribute="trailing" constant="15" id="57s-aG-4FV"/>
-                        <constraint firstItem="7a6-8i-b7f" firstAttribute="leading" secondItem="ASY-TG-LWm" secondAttribute="leading" id="Csc-Kp-4Zy"/>
-                        <constraint firstItem="7a6-8i-b7f" firstAttribute="top" secondItem="ASY-TG-LWm" secondAttribute="bottom" constant="2" id="F4a-7b-wSQ"/>
+                        <constraint firstAttribute="trailing" secondItem="Fag-67-cpm" secondAttribute="trailing" id="9FI-f3-cJ8"/>
+                        <constraint firstItem="Fag-67-cpm" firstAttribute="top" secondItem="FoJ-p7-vkO" secondAttribute="top" constant="3" id="BHG-XC-OKP"/>
                         <constraint firstItem="FzS-AE-JPh" firstAttribute="leading" secondItem="FoJ-p7-vkO" secondAttribute="leading" id="H8z-Oe-j43"/>
-                        <constraint firstAttribute="trailing" secondItem="ASY-TG-LWm" secondAttribute="trailing" id="Z1X-d6-CQ3"/>
+                        <constraint firstItem="lmi-t0-mqp" firstAttribute="top" secondItem="Fag-67-cpm" secondAttribute="bottom" constant="2" id="KrB-7L-O2Z"/>
                         <constraint firstItem="FzS-AE-JPh" firstAttribute="top" secondItem="FoJ-p7-vkO" secondAttribute="top" id="gF0-Jb-Xkl"/>
                         <constraint firstItem="vNt-hd-SSk" firstAttribute="bottom" secondItem="FzS-AE-JPh" secondAttribute="bottom" constant="-3" id="gue-tk-PFg"/>
+                        <constraint firstAttribute="trailing" secondItem="lmi-t0-mqp" secondAttribute="trailing" id="jPZ-b9-nQg"/>
+                        <constraint firstItem="Fag-67-cpm" firstAttribute="leading" secondItem="FzS-AE-JPh" secondAttribute="trailing" constant="14" id="ly7-g1-o4n"/>
+                        <constraint firstItem="lmi-t0-mqp" firstAttribute="leading" secondItem="Fag-67-cpm" secondAttribute="leading" id="pgV-fW-n6w"/>
                         <constraint firstItem="vNt-hd-SSk" firstAttribute="trailing" secondItem="FzS-AE-JPh" secondAttribute="trailing" constant="3" id="uis-Cr-Jof"/>
-                        <constraint firstAttribute="trailing" secondItem="7a6-8i-b7f" secondAttribute="trailing" id="vdX-yU-kKQ"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1eD-aW-Wee">
