--- a/mia/Views/HomePage/Radio/HXRadioShareInfoView.xib
+++ b/mia/Views/HomePage/Radio/HXRadioShareInfoView.xib
@@ -41,18 +41,12 @@
                                 <action selector="sharerAvatarButtonPressed" destination="-1" eventType="touchUpInside" id="tmf-xO-xM5"/>
                             </connections>
                         </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vNt-hd-SSk" customClass="HXIBImageView">
+                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vNt-hd-SSk">
                             <rect key="frame" x="27" y="21" width="16" height="16"/>
-                            <color key="backgroundColor" red="0.070588235294117646" green="0.80392156862745101" blue="0.72941176470588232" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="16" id="izd-vo-FqL"/>
                                 <constraint firstAttribute="width" secondItem="vNt-hd-SSk" secondAttribute="height" multiplier="1:1" id="uLY-yk-yiA"/>
                             </constraints>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                    <real key="value" value="8"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="王晶分享了冰心的一首歌" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fag-67-cpm" customClass="TTTAttributedLabel">
                             <rect key="frame" x="54" y="3" width="266" height="18"/>
