--- a/mia/Views/Common/HXNavigationBar/HXNavigationBar.xib
+++ b/mia/Views/Common/HXNavigationBar/HXNavigationBar.xib
@@ -17,7 +17,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uos-yF-YdI">
+                <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uos-yF-YdI">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vqO-sf-Zh2">
@@ -49,7 +49,7 @@
                                 <action selector="backButtonPressed" destination="-1" eventType="touchUpInside" id="boM-Ll-Gqd"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="个人页" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="elw-aF-JWl">
+                        <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="个人页" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="elw-aF-JWl">
                             <rect key="frame" x="109" y="11" width="102" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="102" id="F1F-g8-BDe"/>
